<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Feedback">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="16dp">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:gravity="center_vertical|center_horizontal"
        android:padding="5dp"
        android:text="@string/Class"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#FF0000"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/Room"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <CheckBox
            android:id="@+id/tech_op1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TechOp1" />

        <CheckBox
            android:id="@+id/tech_op2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TechOp2" />

        <CheckBox
            android:id="@+id/tech_op3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TechOp3" />

        <CheckBox
            android:id="@+id/tech_op4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TechOp4" />

        <CheckBox
            android:id="@+id/tech_op5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TechOp5" />

        <CheckBox
            android:id="@+id/tech_op6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Other" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/OtherComments"
        android:autofillHints="@string/OtherComments" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:background="#000000"
        android:textColor="#FF0000"
        android:onClick="sendFeedback"
        android:text="@string/Submit" />
    </LinearLayout>
</ScrollView>