<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="center_vertical|center_horizontal"
    tools:context=".Feedback">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:text="@string/Class"
            android:background="#FF0000"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/Type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:text="RoomType"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#FFFFFF"
            android:textStyle="bold|italic"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/Room"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <CheckBox
                android:id="@+id/wash_op1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:buttonTint="@color/white"
                android:text="@string/WashOp1" />

            <CheckBox
                android:id="@+id/wash_op2"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:buttonTint="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/WashOp2" />

            <CheckBox
                android:id="@+id/wash_op3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:buttonTint="@color/white"
                android:text="@string/WashOp3" />

            <CheckBox
                android:id="@+id/wash_op4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:buttonTint="@color/white"
                android:text="@string/WashOp4" />

            <CheckBox
                android:id="@+id/wash_op5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:buttonTint="@color/white"
                android:text="@string/WashOp5" />

            <CheckBox
                android:id="@+id/wash_op6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:buttonTint="@color/white"
                android:text="@string/Other" />
        </LinearLayout>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:buttonTint="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:hint="@string/OtherComments"
            android:textColorHint="@color/white"
            android:autofillHints="@string/OtherComments" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:background="@drawable/rounded_edges"
            android:backgroundTint="#FF0000"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/Submit" />
    </LinearLayout>
</ScrollView>